--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ HYPERLIQUID_PRIVATE_KEY=0x000000000000000000000000000000000000000000000000000000
 HYPERLIQUID_TESTNET_RPC_URL=https://testnet.hyperliquid.xyz/rpc
 HYPERLIQUID_TESTNET_WS_URL=wss://testnet.hyperliquid.xyz/ws
 HYPERLIQUID_VAULT_ADDRESS=0x0000000000000000000000000000000000000000
+
+# deBridge cross-chain bridging configuration
+DEBRIDGE_API_URL=https://api.dln.trade/v1.0
+DEBRIDGE_API_KEY=your_debridge_api_key_here
+
+# Pyth Network price feed configuration
+PYTH_PRICE_SERVICE_URL=https://hermes.pyth.network
+PYTH_API_KEY=optional_api_key_for_enhanced_rate_limits
