--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "start": "dotenv -e .env -- node ./dist/index.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "format": "yarn dlx prettier --config .prettierrc 'src/**/*.ts' --write"
+    "format": "yarn dlx prettier --config .prettierrc 'src/**/*.ts' --write",
+    "debridge:quote": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts debridge:quote",
+    "debridge:chains": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts debridge:chains",
+    "debridge:tokens": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts debridge:tokens",
+    "pyth:prices": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts pyth:prices",
+    "pyth:search": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts pyth:search",
+    "pyth:list": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts pyth:list",
+    "web": "dotenv -e .env -- ts-node-dev --respawn --transpile-only ./src/web/server.ts",
+    "web:build": "tsup --config build.ts --entry.server src/web/server.ts --outDir dist/web",
+    "web:start": "dotenv -e .env -- node ./dist/web/server.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
@@ -29,10 +38,19 @@
     "typescript-eslint": "^7.11.0"
   },
   "dependencies": {
+    "@debridge-finance/debridge-protocol-evm-interfaces": "^1.0.4",
+    "@pythnetwork/hermes-client": "^2.0.0",
+    "@pythnetwork/price-service-sdk": "^1.8.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
+    "express": "^5.1.0",
     "zod": "^3.21.4"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
