--- a/package.json
+++ b/package.json
@@ -1,56 +1,23 @@
 {
-  "name": "ts-easy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "name": "@hype/monorepo",
+  "private": true,
+  "packageManager": "yarn@3.6.4",
+  "workspaces": [
+    "packages/*",
+    "packages/integrations/*"
+  ],
   "scripts": {
-    "dev": "dotenv -e .env -- ts-node-dev --transpile-only ./src/index.ts",
-    "deploy:hyperliquid": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts deploy:hyperliquid",
-    "build": "tsup --config build.ts",
-    "start": "dotenv -e .env -- node ./dist/index.js",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "format": "yarn dlx prettier --config .prettierrc 'src/**/*.ts' --write",
-    "debridge:quote": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts debridge:quote",
-    "debridge:chains": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts debridge:chains",
-    "debridge:tokens": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts debridge:tokens",
-    "pyth:prices": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts pyth:prices",
-    "pyth:search": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts pyth:search",
-    "pyth:list": "dotenv -e .env -- ts-node-dev --transpile-only --exit-child ./src/index.ts pyth:list",
-    "web": "dotenv -e .env -- ts-node-dev --respawn --transpile-only ./src/web/server.ts",
-    "web:build": "tsup --config build.ts --entry.server src/web/server.ts --outDir dist/web",
-    "web:start": "dotenv -e .env -- node ./dist/web/server.js"
+    "dev": "concurrently \"yarn workspace @hype/backend dev\" \"yarn workspace @hype/web dev\"",
+    "dev:backend": "yarn workspace @hype/backend dev",
+    "dev:web": "yarn workspace @hype/web dev",
+    "build": "yarn workspaces foreach -pt run build",
+    "clean": "yarn workspaces foreach -p run clean && rm -rf node_modules",
+    "lint": "yarn workspaces foreach -p run lint",
+    "format": "yarn workspaces foreach -p run format",
+    "test": "yarn workspaces foreach -p run test"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "esbuild": "^0.19.8",
-    "eslint": "~9.4.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.5.3",
-    "ts-node-dev": "^2.0.0",
-    "tsup": "^8.1.0",
-    "typescript": "^5.8.0",
-    "typescript-eslint": "^7.11.0"
-  },
-  "dependencies": {
-    "@debridge-finance/debridge-protocol-evm-interfaces": "^1.0.4",
-    "@pythnetwork/hermes-client": "^2.0.0",
-    "@pythnetwork/price-service-sdk": "^1.8.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "axios": "^1.12.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "dotenv-cli": "^7.4.2",
-    "express": "^5.1.0",
-    "zod": "^3.21.4"
-  },
-  "author": "",
-  "license": "ISC",
-  "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
+    "concurrently": "^8.2.2",
+    "typescript": "^5.8.3"
+  }
 }
