--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "buildCommand": "cd packages/web && yarn build",
-  "outputDirectory": "packages/web/dist",
-  "framework": "vite",
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+    { "source": "/", "destination": "/public/index.html" }
   ]
 }
