--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "functions": {
+    "api/**.ts": { "runtime": "nodejs20.x" }
+  },
   "rewrites": [
     { "source": "/", "destination": "/public/index.html" }
   ]
