--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "functions": {
-    "api/**.ts": { "runtime": "nodejs20.x" }
-  },
+  "version": 2,
   "rewrites": [
     { "source": "/", "destination": "/public/index.html" }
   ]
