--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "echo 'Skip build'",
   "rewrites": [
     { "source": "/", "destination": "/public/index.html" }
   ]
