--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
   "name": "@hype/app",
   "private": true,
-  "packageManager": "yarn@3.6.4",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
-    "dev": "dotenv -e .env -- ts-node-dev --respawn --transpile-only ./src/web/server.ts",
-    "build": "tsup --config build.ts",
-    "start": "node ./dist/web/server.js",
-    "lint": "eslint",
-    "format": "yarn dlx prettier --config .prettierrc 'src/**/*.ts' --write"
+    "dev": "npm run build:frontend && NODE_ENV=development ts-node-dev --respawn --transpile-only ./src/web/server.ts",
+    "dev:watch": "concurrently --names \"🏗️BUILD,🚀SERVER\" --prefix-colors \"yellow,cyan\" \"npm run watch:frontend\" \"npm run dev:server\"",
+    "dev:server": "NODE_ENV=development ts-node-dev --respawn --transpile-only ./src/web/server.ts",
+    "watch:frontend": "cd packages/web && npm run build:watch",
+    "build:frontend": "cd packages/web && npm run build",
+    "build:backend": "tsup --config build.ts",
+    "build": "npm run build:frontend && npm run build:backend",
+    "start": "npm run build && node ./dist/web/server.js",
+    "lint": "eslint 'src/**/*.ts'",
+    "format": "npx prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
-    "@types/node": "^18.11.18",
     "@types/express": "^5.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "~9.4.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^16.4.0",
     "prettier": "^3.5.3",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.1.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@pythnetwork/hermes-client": "^2.0.0",
@@ -35,5 +41,6 @@
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "zod": "^3.21.4"
-  }
+  },
+  "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
