--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,14 +12,13 @@
     "test": "echo \"No tests yet\""
   },
   "dependencies": {
-    "@hype/debridge": "workspace:*",
-    "@hype/hyperliquid": "workspace:*",
-    "@hype/pyth": "workspace:*",
-    "@hype/shared": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "@pythnetwork/hermes-client": "^2.0.0",
+    "@pythnetwork/price-service-sdk": "^1.8.0",
+    "axios": "^1.12.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
